--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity": "^3.52.0",
+    "@aws-sdk/client-polly": "^3.52.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.52.0",
+    "@aws-sdk/polly-request-presigner": "^3.52.0",
     "@popperjs/core": "^2.11.2",
+    "aws-sdk": "^2.1078.0",
+    "buffer": "^6.0.3",
     "click-outside-vue3": "^4.0.1",
     "openai": "^2.0.4",
     "pinia": "^2.0.11",
