--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "aws-sdk": "^2.1078.0",
     "buffer": "^6.0.3",
     "click-outside-vue3": "^4.0.1",
+    "gsap": "^3.9.1",
     "lodash": "^4.17.21",
     "openai": "^2.0.4",
     "pinia": "^2.0.11",
     "postcss-import": "^14.0.2",
+    "splitting": "^1.0.6",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.29",
     "vue-click-outside": "^1.1.0"
